<resources>
    //! -- NO DETECTED LANGUAGE-->
    //! -- Global Preferences-->
    <string name="global_app_company_name">Linke Liste Ortenau e.V</string>
    <string name="app_name">LiLO</string>
    <string name="global_app_version_code">Version Code</string>
    <string name="global_app_code">Code</string>
    <string name="global_app_version">Version</string>
    <string name="global_app_beta">(BETA)</string>

    //! -- User Preferences-->
    <string name="pref_user_title">Settings</string>
    <string name="pref_user_reset">Reset App</string>
    <string name="pref_user_about_title">About</string>
    <string name="pref_user_feedback_title">Feedback</string>
    <string name="pref_user_feedback_summary">Have feedback? We would like to hear it. Or submit a bug.</string>
    <string name="pref_user_third_party_software_title">Third Party Notices</string>
    <string name="pref_user_third_party_software_summary">Sweet software that helped us</string>
    <string name="pref_user_license_title">LICENSE</string>
    <string name="pref_user_license_summary">Distributed under the open source Apache 2.0 license</string>
    <string name="pref_user_beta_title">BETA</string>
    <string name="pref_user_event_notification">Show Event-Notifications</string>
    <string name="pref_user_article_notification">Show Article-Notification</string>
    <string name="pref_user_developer_title">Developer options</string>
    <string name="pref_user_debug">Debug mode</string>

    //! -- Privacy Policy-->
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="button_privacy_police_agree">AGREE AND CONTINUE</string>
    <string name="button_privacy_police_decline">DECLINE AND END</string>

    //! -- Navigation Controller-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Linke Liste Ortenau e.V</string>
    <string name="nav_header_subtitle">Mensch im Mittelpunkt, nicht der Profit</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_event">Events</string>

    <string name="menu_district_council">District Council</string>
    <string name="menu_district_council_votes">Votes</string>
    <string name="menu_district_council_all">From the District Council</string>

    <string name="menu_program">Program</string>
    <string name="menu_health_care">Health Care</string>
    <string name="menu_local_transport">Local Transport</string>
    <string name="menu_housing">Housing</string>
    <string name="menu_social">Social</string>
    <string name="menu_training">Training</string>
    <string name="menu_deep_geothermal_energy">Deep Geothermal Energy</string>

    <string name="menu_about">About</string>
    <string name="menu_lilo">LiLO</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_preference">Setup</string>

    //! -- Description Content-->
    <string name="description_lilo_logo">Logo LiLO</string>
    <string name="description_action_button_floating">Floating Action Button</string>
    <string name="description_image_mail">Logo Mail</string>
    <string name="description_image_signal">Logo Signal</string>
    <string name="description_image_telegram">Logo Telegram</string>
    <string name="description_image_facebook">Logo Facebook</string>
    <string name="description_image_instagram">Logo Instagram</string>
    <string name="description_image_youtube">Logo Youtube</string>

    //! -- WebView Fragments-->
    <string name="webview_search">Search…</string>
    <string name="webview_loading">Loading</string>
    <string name="webview_percent">%</string>
    <string name="webview_error_no_webpage">Hopla… Error 404 found!</string>
    <string name="webview_error_no_connection_to_server">No connection!</string>

    //! -- Events Recycler
    <string name="event_header_title">All Events</string>
    <string name="event_header_description">A List with all coming Events</string>
    <string name="event_recycler_event_title">Event Title</string>
    <string name="event_recycler_event_weekday">Weekday</string>
    <string name="event_recycler_event_day">Day</string>
    <string name="event_recycler_event_start_time">time</string>
    <string name="event_recycler_event_end_text"> - </string>
    <string name="event_recycler_event_end_time">time</string>
    <string name="event_recycler_event_clock">clock</string>

    //! -- Share Action Button Floating-->
    <string name="share_chooser_title">Choose one</string>
    <string name="share_subject">Linke Liste Ortenau</string>
    <string name="share_message_show_here">Show here:</string>

    //! -- Share App Action PlayStore
    <string name="share_app_title">Choose one</string>
    <string name="share_app_subject">Linke Liste Ortenau</string>
    <string name="share_app_message">Show here for the LiLO App: </string>
    <string name="share_app_error">Error sharing app</string>

    //! -- Contact Text-->
    <string name="contact_first_text">Unsere Treffen finden im R12 (Rammersweierstraße 12) statt. Du bist herzlich dazu eingeladen, bei uns vorbei zu schauen. Eine Anmeldung ist nicht nötig.</string>
    <string name="contact_mail_contact">Write us an eMail</string>
    <string name="contact_signal_join">Join our signal group</string>
    <string name="contact_telegram_join">Join our telegram group</string>
    <string name="contact_facebook_follow">Follow our Facebook-Site</string>
    <string name="contact_instagram_follow">Follow our Instgram-Site</string>
    <string name="contact_youtube_follow">Follow our Youtube-Site</string>
    <string name="contact_mail_address">info@linke-liste-ortenau.de</string>
    <string name="contact_mail_subject">Contact from User</string>
    <string name="contact_mail_text">Hello LiLO, </string>

    //! -- Feedback Text-->
    <string name="feedback_mail_address">info@linke-liste-ortenau.de</string>
    <string name="feedback_mail_subject">Feedback from App-User</string>
    <string name="feedback_mail_phone">Smartphone</string>
    <string name="developer_mail_address">Kontakt@ManuelZiel.com</string>

    //! -- Notification-->
    <string name="notification_event_title">Event Start</string>
    <string name="notification_event_show_content_action_bar_title">Event</string>
    <string name="notification_title_time">o\'Clock</string>
    <string name="notification_article_new_title">NEW LILO ARTICLE!</string>

    //! -- Dialog-->
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="dialog_action_ok">OK</string>

    <string name="dialog_reset_message">Reset and delete?</string>

    <string name="dialog_license_title">LICENSE</string>
    <string name="dialog_license_copyright_message">Copyright</string>
    <string name="dialog_license_message">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this software except in compliance with the License.
You may obtain a copy of the License at</string>
    <string name="dialog_license_link">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="dialog_license_message_last">Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="dialog_third_party_license_title">Third-party License</string>

</resources>
