<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/event_recycler_event_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/lilo_primary_500"
        app:layout_constraintBottom_toTopOf="@+id/event_weekday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_weekday"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/event_recycler_event_weekday"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintBottom_toTopOf="@+id/divider_content"
        app:layout_constraintEnd_toStartOf="@+id/event_date" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/event_recycler_event_day"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintBottom_toBottomOf="@+id/event_weekday"
        app:layout_constraintEnd_toStartOf="@+id/event_start_time"
        app:layout_constraintTop_toTopOf="@+id/event_weekday" />

    <TextView
        android:id="@+id/event_start_time"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/event_recycler_event_start_time"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintBottom_toBottomOf="@+id/event_date"
        app:layout_constraintEnd_toStartOf="@+id/event_end_text"
        app:layout_constraintTop_toTopOf="@+id/event_date" />

    <TextView
        android:id="@+id/event_end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/event_recycler_event_end_text"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintBottom_toBottomOf="@+id/event_start_time"
        app:layout_constraintEnd_toStartOf="@+id/event_end_time"
        app:layout_constraintTop_toTopOf="@+id/event_start_time" />

    <TextView
        android:id="@+id/event_end_time"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/event_recycler_event_end_time"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintBottom_toBottomOf="@+id/event_end_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/event_end_text" />

    <View
        android:id="@+id/divider_content"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:background="@color/lilo_primary_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_weekday" />

</androidx.constraintlayout.widget.ConstraintLayout>